--- a/FreshCalc/Base.lproj/Main.storyboard
+++ b/FreshCalc/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2x-xI-60Y">
                                         <rect key="frame" x="12" y="60" width="450" height="60"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAB-nq-hDq">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jAB-nq-hDq" userLabel="Tape Label" customClass="CalculatorLabel">
                                                 <rect key="frame" x="204" y="20" width="42" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -330,6 +330,10 @@
                             <constraint firstItem="LRP-8D-F0I" firstAttribute="top" secondItem="5cO-aG-ejh" secondAttribute="bottom" id="qXY-lr-yTs"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="resultLabel" destination="GWF-IT-5xf" id="MGv-YM-PaV"/>
+                        <outlet property="tapeLabel" destination="jAB-nq-hDq" id="FJI-t9-tRt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
